--- a/index.html
+++ b/index.html
@@ -2,18 +2,12 @@
 <html>
 	<head>
 		<title>We Visit UK</title>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
+		<div class="blurb">
         		<h1>Hello World from We Visit UK!</h1>
     		</div><!-- /.blurb -->
-		</div><!-- /.container -->
 		<footer>
     		<ul>
         		<li><a href="mailto:wevisituk@gmail.com">email</a></li>
