--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     		</div><!-- /.blurb -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:wevisituk@gmail.com">email</a></li>
-        		<li><a href="https://github.com/wevisituk">github.com/wevisituk</a></li>
+        		<li><a href="mailto:wevisituk@gmail.com">Send us an email</a></li>
 			</ul>
 		</footer>
 	</body>
