Updated FAQ section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<li><a href="#intro" class="active">Introduction</a></li>
 							<li><a href="#first">First Section</a></li>
 							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#cta">F.A.Q</a></li>
 						</ul>
 					</nav>
 
@@ -122,19 +122,47 @@
 								</footer>
 							</section>
 
-						<!-- Get Started -->
+						<!-- F.A.Q -->
 							<section id="cta" class="main special">
-								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+								<header class="custom">
+									<h2>F.A.Q</h2>
+
+									<h3>Which areas are you covering?</h3>
+									<p>Central London and London Tube Zones 1-2.</p>
+
+									<h3>Which are your recommendation for finding rooms, flats or houses to rent?</h3>
+									<p>We recommend <a href="https://www.spareroom.co.uk/">SpareRoom</a> for rooms in a shared property.<br> 
+										For entire properties like flats or houses, we recommend 
+										<a href="https://www.rightmove.co.uk/">Rightmove</a>, 
+										<a href="https://www.zoopla.co.uk/">Zoopla</a> and 
+										<a href="https://www.openrent.co.uk/">OpenRent</a>.
+									</p>
+
+									<h3>What value do you offer that I cannot find online?</h3>
+									<p>Renting a property and paying a deposit in advance online could not end well. 
+										Most people decide to stay in a hotel or Airbnb for several weeks while finding themselves a place to rent, which could be costly in London.
+									</p>
+									<p>We would visit the property on your behalf, you won't need to pay for accommodation and you could do it from your own home and country. 
+										We will visit the advertised property and we will send you a report back.
+									</p>
+
+									<h3>What contains your report?</h3>
+									<p>Our report will contain pictures and a video of the surroundings and the entrance, which are not often posted online. 
+										We will let you know if the property is as advertised and take pictures and photos on the day of the visit. 
+										We will also look for things for you in advance like if the bathrooms are clean, the property looks tidy or it is noisy and it is well insulated.
+									</p>
+
+									<h3>How do I know you will be honest and you will not try to make us rent a property which we won't like when we arrive?</h3>
+									<p>We are charging for visiting the property, so our main goal is to help you rent a place you will really like and enjoy while you stay in London.
+
+									</p>
+
+									<h3>Will this protect me from scams online?</h3>
+									<p>We will not able to guarantee it 100%, but most of the scams are successful because the properties don't exist, or the landlord or letting agency is made up, etc. 
+										With locals like us, visiting the property and inspecting it, as well as meeting with the landlord or letting agency, the probabilities are much lower.
+									</p>
+
 								</header>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
 							</section>
 
 					</div>
