--- a/index.html
+++ b/index.html
@@ -1138,11 +1138,9 @@
 
     <!-- ======= F.A.Q Section ======= -->
     <section id="faq" class="faq">
-      <div class="container-fluid" data-aos="fade-up">
+      <div class="container" data-aos="fade-up">
 
         <div class="row gy-4">
-
-          <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch  order-2 order-lg-1">
 
             <div class="content px-xl-5">
               <h3>Frequently Asked <strong>Questions</strong></h3>
@@ -1248,7 +1246,6 @@
 
           </div>
 
-          <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img" style='background-image: url("assets/img/faq.jpg");'>&nbsp;</div>
         </div>
 
       </div>
