--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
       <div class="container">
 
         <div class="section-header">
-          <h2>Contact Us</h2>
+          <h2>Contact Us - WeVisit it for you</h2>
           <p>If you have any questions or queries a member of staff will always be happy to help.</p>
         </div>
 
@@ -1092,15 +1092,6 @@
               <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Graphic Design</a></li>
             </ul>
-          </div>
-
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Subscribe to our newsletter to get the latest news.</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-
           </div>
 
         </div>
