--- a/index.html
+++ b/index.html
@@ -294,43 +294,36 @@
 
           <li class="nav-item col-6 col-md-4 col-lg-2">
             <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#tab-1">
-              <i class="bi bi-binoculars color-cyan"></i>
-              <h4>Modinest</h4>
+              <i class="bi bi-search color-cyan"></i>
+              <h4>Find a property</h4>
             </a>
           </li><!-- End Tab 1 Nav -->
 
           <li class="nav-item col-6 col-md-4 col-lg-2">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-2">
-              <i class="bi bi-box-seam color-indigo"></i>
-              <h4>Undaesenti</h4>
+              <i class="bi bi-person-check color-indigo"></i>
+              <h4>WeVisit for you</h4>
             </a>
           </li><!-- End Tab 2 Nav -->
 
           <li class="nav-item col-6 col-md-4 col-lg-2">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-3">
-              <i class="bi bi-brightness-high color-teal"></i>
-              <h4>Pariatur</h4>
+              <i class="bi bi-file-earmark-check color-teal"></i>
+              <h4>Get our Report</h4>
             </a>
           </li><!-- End Tab 3 Nav -->
 
           <li class="nav-item col-6 col-md-4 col-lg-2">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-4">
-              <i class="bi bi-command color-red"></i>
-              <h4>Nostrum</h4>
+              <i class="bi bi-key color-red"></i>
+              <h4>Rent it</h4>
             </a>
           </li><!-- End Tab 4 Nav -->
 
           <li class="nav-item col-6 col-md-4 col-lg-2">
-            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-5">
-              <i class="bi bi-easel color-blue"></i>
-              <h4>Adipiscing</h4>
-            </a>
-          </li><!-- End Tab 5 Nav -->
-
-          <li class="nav-item col-6 col-md-4 col-lg-2">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-6">
-              <i class="bi bi-map color-orange"></i>
-              <h4>Reprehit</h4>
+              <i class="bi bi-box-seam color-indigo"></i>
+              <h4>Move in</h4>
             </a>
           </li><!-- End Tab 6 Nav -->
 
@@ -341,7 +334,7 @@
           <div class="tab-pane active show" id="tab-1">
             <div class="row gy-4">
               <div class="col-lg-8 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
-                <h3>Modinest</h3>
+                <h3>Find a property</h3>
                 <p class="fst-italic">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                   magna aliqua.
@@ -366,7 +359,7 @@
           <div class="tab-pane" id="tab-2">
             <div class="row gy-4">
               <div class="col-lg-8 order-2 order-lg-1">
-                <h3>Undaesenti</h3>
+                <h3>Move</h3>
                 <p>
                   Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
                   velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
@@ -725,7 +718,7 @@
 
               <div class="pricing-header">
                 <h3>Promotion</h3>
-                <h4><sup>£</sup>0<span> / month</span></h4>
+                <h4><sup>£</sup>0<span> / visit</span></h4>
               </div>
 
               <ul>
@@ -748,7 +741,7 @@
 
               <div class="pricing-header">
                 <h3>Business Plan</h3>
-                <h4><sup>$</sup>29<span> / month</span></h4>
+                <h4><sup>£</sup>25<span> / visit</span></h4>
               </div>
 
               <ul>
