--- a/index.html
+++ b/index.html
@@ -140,40 +140,40 @@
 
         <ul class="nav nav-tabs row gy-4 d-flex">
 
-          <li class="nav-item col-6 col-md-4 col-lg-2">
+          <li class="nav-item col-6 col-md-4 col-lg-2 mx-auto">
             <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#tab-1">
               <i class="bi bi-search color-cyan"></i>
               <h4>Find a property</h4>
             </a>
           </li><!-- End Tab 1 Nav -->
 
-          <li class="nav-item col-6 col-md-4 col-lg-2">
+          <li class="nav-item col-6 col-md-4 col-lg-2 mx-auto">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-2">
               <i class="bi bi-person-check color-indigo"></i>
               <h4>WeVisit for you</h4>
             </a>
           </li><!-- End Tab 2 Nav -->
 
-          <li class="nav-item col-6 col-md-4 col-lg-2">
+          <li class="nav-item col-6 col-md-4 col-lg-2 mx-auto">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-3">
               <i class="bi bi-file-earmark-check color-teal"></i>
               <h4>Get our Report</h4>
             </a>
           </li><!-- End Tab 3 Nav -->
 
-          <li class="nav-item col-6 col-md-4 col-lg-2">
+          <li class="nav-item col-6 col-md-4 col-lg-2 mx-auto">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-4">
               <i class="bi bi-key color-blue"></i>
               <h4>Rent it</h4>
             </a>
           </li><!-- End Tab 4 Nav -->
 
-          <li class="nav-item col-6 col-md-4 col-lg-2">
-            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-6">
+          <li class="nav-item col-6 col-md-4 col-lg-2 mx-auto">
+            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-5">
               <i class="bi bi-box-seam color-indigo"></i>
               <h4>Move in</h4>
             </a>
-          </li><!-- End Tab 6 Nav -->
+          </li><!-- End Tab 5 Nav -->
 
         </ul>
 
@@ -304,31 +304,6 @@
               </div>
             </div>
           </div><!-- End Tab Content 5 -->
-
-          <div class="tab-pane" id="tab-6">
-            <div class="row gy-4">
-              <div class="col-lg-8 order-2 order-lg-1">
-                <h3>Reprehit</h3>
-                <p>
-                  Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                  culpa qui officia deserunt mollit anim id est laborum
-                </p>
-                <p class="fst-italic">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua.
-                </p>
-                <ul>
-                  <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                  <li><i class="bi bi-check-circle-fill"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                  <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-                </ul>
-              </div>
-              <div class="col-lg-4 order-1 order-lg-2 text-center">
-                <img src="assets/img/features-6.svg" alt="" class="img-fluid">
-              </div>
-            </div>
-          </div><!-- End Tab Content 6 -->
 
         </div>
 
