Removed href and updated icons for Featured Services Section

--- a/index.html
+++ b/index.html
@@ -90,39 +90,39 @@
           <div class="col-xl-3-custom col-md-6 d-flex" data-aos="zoom-out">
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-search color-cyan"></i></div>
-              <h4><a href="" class="stretched-link">Find a property</a></h4>
+              <h4>Find a property</h4>
               <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-xl-3-custom col-md-6 d-flex" data-aos="zoom-out" data-aos-delay="200">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-bounding-box-circles icon"></i></div>
-              <h4><a href="" class="stretched-link">WeVisit for you</a></h4>
+              <div class="icon"><i class="bi bi-person-check icon"></i></div>
+              <h4>WeVisit for you</h4>
               <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-xl-3-custom col-md-6 d-flex" data-aos="zoom-out" data-aos-delay="400">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-calendar4-week icon"></i></div>
-              <h4><a href="" class="stretched-link">Get our report</a></h4>
+              <div class="icon"><i class="bi bi-file-earmark-check icon"></i></div>
+              <h4>Get our report</h4>
               <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-xl-3-custom col-md-6 d-flex" data-aos="zoom-out" data-aos-delay="600">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-broadcast icon"></i></div>
-              <h4><a href="" class="stretched-link">Rent it</a></h4>
+              <div class="icon"><i class="bi bi-key icon"></i></div>
+              <h4>Rent it</h4>
               <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
             </div>
           </div>
 
           <div class="col-xl-3-custom col-md-6 d-flex" data-aos="zoom-out" data-aos-delay="800">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-broadcast icon"></i></div>
-              <h4><a href="" class="stretched-link">Move in</a></h4>
+              <div class="icon"><i class="bi bi-box-seam icon"></i></div>
+              <h4>Move in</h4>
               <p>At vero eos et accusamus et iusto odio dinissimos ducimus qui blanditiis</p>
             </div>
           </div>
