--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Variables CSS Files. Uncomment your preferred color scheme -->
   <link href="assets/css/variables.css" rel="stylesheet">
   <!-- <link href="assets/css/variables-blue.css" rel="stylesheet"> -->
-  <!-- <link href="assets/css/variables-green.css" rel="stylesheet"> -->
+  <link href="assets/css/variables-green.css" rel="stylesheet">
   <!-- <link href="assets/css/variables-orange.css" rel="stylesheet"> -->
   <!-- <link href="assets/css/variables-purple.css" rel="stylesheet"> -->
   <!-- <link href="assets/css/variables-red.css" rel="stylesheet"> -->
@@ -62,19 +62,19 @@
         <i class="bi bi-list mobile-nav-toggle d-none"></i>
       </nav><!-- .navbar -->
 
-      <a class="btn-getstarted scrollto" href="index.html#about">Get Started</a>
+      <a></a><!-- Maintain this tag to keep the menu centred -->
 
     </div>
   </header><!-- End Header -->
 
   <section id="hero-animated" class="hero-animated d-flex align-items-center">
     <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative" data-aos="zoom-out">
-      <img src="assets/img/hero-carousel/hero-carousel-3.svg" class="img-fluid animated">
+      <img src="assets/img/icon.png" class="img-fluid">
+      <p></p>
       <h2>Welcome to <span>WeVisit</span></h2>
-      <p>Et voluptate esse accusantium accusamus natus reiciendis quidem voluptates similique aut.</p>
+      <p>Find Check Rent</p>
       <div class="d-flex">
-        <a href="#about" class="btn-get-started scrollto">Get Started</a>
-        <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+        <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center" style="margin-left: 0px;"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
       </div>
     </div>
   </section>
@@ -89,7 +89,7 @@
 
           <div class="col-xl-3-custom col-md-6 d-flex" data-aos="zoom-out">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-search color-cyan"></i></div>
+              <div class="icon"><i class="bi bi-search icon"></i></div>
               <h4>Find a property</h4>
               <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
             </div>
