Adding facebook messenger and instagram

--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
   <link href="assets/css/main.css" rel="stylesheet">
 
   <!-- Floating Whatsapp Icon -->
-  <link href="assets/css/whatsapp.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-
+  <link href="assets/css/floating-icons.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/add9537e54.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -72,11 +71,17 @@
     </div>
   </header><!-- End Header -->
 
-    <!-- Whatsapp Button -->
-    <a href="https://api.whatsapp.com/send?phone=+447752393031&text=Hello, would you do a visit on my behalf?" class="floating" target="_blank">
-      <i class="fa fa-whatsapp float-button"></i>
+    <!-- Floating Button -->
+    <a href="https://api.whatsapp.com/send?phone=+447752393031&text=Hello, would you do a visit on my behalf?" class="floating-whatsapp" target="_blank">
+      <i class="fa-brands fa-whatsapp float-button"></i>
     </a>
-    <!-- End of Whatsapp Button -->
+    <a href="https://m.me/wevisituk" class="floating-fb" target="_blank">
+      <i class="fa-brands fa-facebook-messenger float-button"></i>
+    </a>
+    <a href="https://www.instagram.com/wevisituk/" class="floating-ig" target="_blank">
+      <i class="fa fa-instagram float-button"></i>
+    </a>
+    <!-- End of Floating Button -->
 
   <section id="hero-animated" class="hero-animated d-flex align-items-center">
     <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative" data-aos="zoom-out">
