--- a/index.html
+++ b/index.html
@@ -608,15 +608,19 @@
 
               <div class="pricing-header">
                 <h3>Promotion</h3>
-                <h4><sup>£</sup>0<span> / visit</span></h4>
+                <h4><sup>£</sup>15<span> / visit</span></h4>
               </div>
 
               <ul>
-                <li><i class="bi bi-dot"></i> <span>Quam adipiscing vitae proin</span></li>
-                <li><i class="bi bi-dot"></i> <span>Nec feugiat nisl pretium</span></li>
-                <li><i class="bi bi-dot"></i> <span>Nulla at volutpat diam uteera</span></li>
-                <li class="na"><i class="bi bi-x"></i> <span>Pharetra massa massa ultricies</span></li>
-                <li class="na"><i class="bi bi-x"></i> <span>Massa ultricies mi quis hendrerit</span></li>
+                <li><i class="bi bi-dot"></i> <span>Property visit (free!)</span></li>
+                <li><i class="bi bi-dot"></i> <span>Videos and photos report</span></li>
+                <li><i class="bi bi-dot"></i> <span>Summary of the surrounding area and the property</span></li>
+                
+                <li class="na"><i class="bi bi-x"></i> <span>A specific list of questions to ask the agency/landlord</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>A specific list of things to check outside the report scope</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>Advice regarding the best areas to live based on necessities or work by locals</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>Advice regarding transport links based on necessities by locals</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>Premium Account at SpareRoom. We contact them for you!</span></li>
               </ul>
 
               <div class="text-center mt-auto">
@@ -631,15 +635,19 @@
 
               <div class="pricing-header">
                 <h3>Regular Plan</h3>
-                <h4><sup>£</sup>20<span> / visit</span></h4>
+                <h4><sup>£</sup>25<span> / visit</span></h4>
               </div>
 
               <ul>
-                <li><i class="bi bi-dot"></i> <span>Quam adipiscing vitae proin</span></li>
-                <li><i class="bi bi-dot"></i> <span>Nec feugiat nisl pretium</span></li>
-                <li><i class="bi bi-dot"></i> <span>Nulla at volutpat diam uteera</span></li>
-                <li><i class="bi bi-dot"></i> <span>Pharetra massa massa ultricies</span></li>
-                <li><i class="bi bi-dot"></i> <span>Massa ultricies mi quis hendrerit</span></li>
+                <li><i class="bi bi-dot"></i> <span>Property visit</span></li>
+                <li><i class="bi bi-dot"></i> <span>Video and photos report</span></li>
+                <li><i class="bi bi-dot"></i> <span>Summary of the surrounding area and the property</span></li>
+                <li><i class="bi bi-dot"></i> <span>A specific list of questions to ask the agency/landlord</span></li>
+                <li><i class="bi bi-dot"></i> <span>A specific list of things to check outside the report scope</span></li>
+                
+                <li class="na"><i class="bi bi-x"></i> <span>Advice regarding the best areas to live based on necessities or work by locals</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>Advice regarding transport links based on necessities by locals</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>Premium Account at SpareRoom. We contact them for you!</span></li>
               </ul>
 
               <div class="text-center mt-auto">
@@ -658,11 +666,14 @@
               </div>
 
               <ul>
-                <li><i class="bi bi-dot"></i> <span>Quam adipiscing vitae proin</span></li>
-                <li><i class="bi bi-dot"></i> <span>Nec feugiat nisl pretium</span></li>
-                <li><i class="bi bi-dot"></i> <span>Nulla at volutpat diam uteera</span></li>
-                <li><i class="bi bi-dot"></i> <span>Pharetra massa massa ultricies</span></li>
-                <li><i class="bi bi-dot"></i> <span>Massa ultricies mi quis hendrerit</span></li>
+                <li><i class="bi bi-dot"></i> <span>Property visit</span></li>
+                <li><i class="bi bi-dot"></i> <span>Video and photos report</span></li>
+                <li><i class="bi bi-dot"></i> <span>Summary of the surrounding area and the property</span></li>
+                <li><i class="bi bi-dot"></i> <span>A specific list of questions to ask the agency/landlord</span></li>
+                <li><i class="bi bi-dot"></i> <span>A specific list of things to check outside the report scope</span></li>
+                <li><i class="bi bi-dot"></i> <span>Advice from locals regarding the best areas to live based on your personality, where is your work or where you study</span></li>
+                <li><i class="bi bi-dot"></i> <span>Advice from locals regarding transport links based on your personality, where is your work or where you study</span></li>
+                <li><i class="bi bi-dot"></i> <span>Premium Account at <a href="https://www.spareroom.co.uk/content/info-faq/how-the-site-works" target="_blank">SpareRoom</a>. We contact them for you!</span></li>
               </ul>
 
               <div class="text-center mt-auto">
@@ -671,6 +682,12 @@
 
             </div>
           </div><!-- End Pricing Item -->
+
+          <div class="section-header">
+            <p>We will have premium accounts on websites to give you more opportunities to contact rooms and properties.
+              We will write down an easy contract on each visit stating the property we are visiting and that after receiving the report if you decide to rent it out, you should pay our fees.
+            </p>
+          </div>
 
         </div>
 
