--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
 
         <div class="section-header">
           <h2>Our Pricing</h2>
-          <p>Architecto nobis eos vel nam quidem vitae temporibus voluptates qui hic deserunt iusto omnis nam voluptas asperiores sequi tenetur dolores incidunt enim voluptatem magnam cumque fuga.</p>
+          <p><p>We will write down an easy contract on each visit stating the property we will visit. After receiving the report if you decide to rent it out, you will have to pay our fees.</p>
         </div>
 
         <div class="row gy-4">
@@ -618,8 +618,8 @@
                 
                 <li class="na"><i class="bi bi-x"></i> <span>A specific list of questions to ask the agency/landlord</span></li>
                 <li class="na"><i class="bi bi-x"></i> <span>A specific list of things to check outside the report scope</span></li>
-                <li class="na"><i class="bi bi-x"></i> <span>Advice regarding the best areas to live based on necessities or work by locals</span></li>
-                <li class="na"><i class="bi bi-x"></i> <span>Advice regarding transport links based on necessities by locals</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>Advice from locals regarding the best areas to live based on your personality, where is your work or where you study</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>Advice from locals regarding transport links based on your personality, where is your work or where you study</span></li>
                 <li class="na"><i class="bi bi-x"></i> <span>Premium Account at SpareRoom. We contact them for you!</span></li>
               </ul>
 
@@ -645,8 +645,8 @@
                 <li><i class="bi bi-dot"></i> <span>A specific list of questions to ask the agency/landlord</span></li>
                 <li><i class="bi bi-dot"></i> <span>A specific list of things to check outside the report scope</span></li>
                 
-                <li class="na"><i class="bi bi-x"></i> <span>Advice regarding the best areas to live based on necessities or work by locals</span></li>
-                <li class="na"><i class="bi bi-x"></i> <span>Advice regarding transport links based on necessities by locals</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>Advice from locals regarding the best areas to live based on your personality, where is your work or where you study</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>Advice from locals regarding transport links based on your personality, where is your work or where you study</span></li>
                 <li class="na"><i class="bi bi-x"></i> <span>Premium Account at SpareRoom. We contact them for you!</span></li>
               </ul>
 
@@ -684,8 +684,8 @@
           </div><!-- End Pricing Item -->
 
           <div class="section-header">
-            <p>We will have premium accounts on websites to give you more opportunities to contact rooms and properties.
-              We will write down an easy contract on each visit stating the property we are visiting and that after receiving the report if you decide to rent it out, you should pay our fees.
+            <p>
+              If you finally rent a room that we visit, you will need to pay 2.5% of the yearly amount (1-year contracts) or 2% of the annual amount (under 1-year contracts)
             </p>
           </div>
 
